# fastapi

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  task_cache.py
backend/app/routers/: auth.py  tasks.py
backend/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_config_py.html  z_5f5a17c013354698_database_py.html  z_5f5a17c013354698_deps_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_models_py.html  z_5f5a17c013354698_schemas_py.html  z_5f5a17c013354698_security_py.html  z_5f5a17c013354698_task_cache_py.html  z_6549c0330f733809___init___py.html  z_6549c0330f733809_auth_py.html  z_6549c0330f733809_tasks_py.html
backend/tests/: conftest.py  load_test_report.html  load_test_stats.csv  load_test_stats_history.csv  locustfile.py
backend/tests/functional/: test_auth.py  test_tasks.py
backend/tests/unit/: test_database.py  test_schemas.py  test_security.py  test_task_cache.py
frontend/: .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  package.json  webpack.config.js
frontend/public/: index.html
frontend/public/css/: style.css  theme-glass.css
frontend/src/: main.js
frontend/src/mock/: task.js
frontend/src/model/: tasks-model.js
frontend/src/presenter/: board-presenter.js  task-new-presenter.js  task-presenter.js
frontend/src/services/: api.js
frontend/src/utils/: common.js  constants.js  render.js
frontend/src/view/: abstract-view.js  auth-panel-view.js  board-toolbar-view.js  board-view.js  kanban-board-view.js  load-more-button-view.js  no-task-view.js  site-menu-view.js  smart-view.js  task-edit-view.js  task-view.js
